fix bug where login, register pages rendered twice on mobile, tablet sizes

--- a/client/src/assets/styles/global.scss
+++ b/client/src/assets/styles/global.scss
@@ -148,6 +148,7 @@ textarea:focus {
 
 .errorMessage {
   user-select: none;
+  max-width: 90vw;
   color: rgb(255, 64, 0);
 }
 
@@ -249,6 +250,9 @@ textarea:focus {
   .formItem {
     flex-direction: column;
   }
+  .errorMessage {
+    text-align: center;
+  }
 }
 
 /* tablet styles */
@@ -268,6 +272,9 @@ textarea:focus {
   }
   .formItem {
     flex-direction: column;
+  }
+  .errorMessage {
+    text-align: center;
   }
 }
 
